--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             "color": "#ff0019",
             "messages": [
               "Chúc mừng sinh nhật anh",
-              "Em yêu anh &#10084;&#10084;&#10084;"
+              "Em yêu anh Trần Hoàng &#10084;&#10084;&#10084;"
             ],
             "music": "/"
           },
